# lm-evaluation-harness

./: .coveragerc  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  =0.6.0  =3.9  ACKNOWLEDGMENTS.md  AGENTS.md  CITATION.bib  CODEOWNERS  COMMANDS.md  DETAILS.md  Dockerfile  LICENSE.md  LLM_JUDGE_README.md  MANIFEST.in  OPENROUTER_INTEGRATION.md  PR_DESCRIPTION.md  RBLN_MODEL_TYPE_EVALUATION_GUIDE.md  README.md  README_K2.md  ROADMAP.md  afrimgsm_direct_eng  aibe_evaluation_results.json  augment_truthful.py  azure_openai_wrapper.py  balance_truthful_split.py  base.py  based_hf.py  benchmark_evaluation_demo.py  cache_dir_rank0.db  classifier_data.json  classifier_pipeline.joblib  compare_results.py  coqa.py  download_all.sh  env_example  eval.sh  (+123 more)
.claude/: settings.local.json
.github/: copilot-instructions.md  pull_request_template.md
SlurmEvals/: llama2UnigramHendrycksEval.sh  llama2unigramEval.sh  llamaBIGbench.sh  truthfulGen.sh
african_nlp_benchmarks/: afridoc_swa_health_0shot_2026-02-19T20-19-26.237329.json  afridoc_swa_health_5shot_2026-02-19T20-27-10.478186.json  afrisenti_sw_5_5shot_2026-01-15T14-26-37.660309.json  afrisenti_swa_prompt_1_0shot_2026-01-15T13-13-26.035414.json  afrisenti_swa_prompt_1_5shot_2026-01-15T13-16-16.787849.json  afrisenti_swa_prompt_2_0shot_2026-01-15T13-17-39.877915.json  afrisenti_swa_prompt_2_5shot_2026-01-15T13-20-36.883286.json  afrisenti_swa_prompt_3_0shot_2026-01-15T13-22-08.557638.json  afrisenti_swa_prompt_3_5shot_2026-01-15T13-26-01.560203.json  afrisenti_swa_prompt_4_0shot_2026-01-15T13-27-26.360397.json  afrisenti_swa_prompt_4_5shot_2026-01-15T13-30-41.586282.json  afrisenti_swa_prompt_5_0shot_2026-01-15T13-32-40.029562.json  kik_topics_2026-01-27T16-57-12.083895.json  kik_topics_2026-01-27T17-08-00.287818.json  luo_bele_0shot_2026-01-26T15-20-20.506546.json  luo_bele_5shot_2026-01-26T15-37-38.112326.json  luo_bele_5shot_2026-01-27T14-18-33.869841.json  luo_ner_2026-01-27T14-37-12.063278.json  luo_sib_topics_2026-01-27T14-43-15.393037.json  mafand_en_luo_2026-01-27T11-55-34.199553.json  mafand_en_luo_5shot_2026-01-27T11-32-56.023062.json  mafand_en_sw_2026-01-27T11-47-31.263778.json  mafand_en_sw_5shot_2026-01-27T11-18-42.892813.json  mafand_luo_en_5shot_2026-01-27T11-39-23.921399.json  mafand_sw_en_5shot_2026-01-27T11-24-48.239813.json  masakhaner_luo_0shot_2026-01-16T14-55-46.542755.json  masakhaner_luo_0shot_investigation_2026-01-16T16-02-26.648276.json  masakhaner_luo_5shot_2026-01-16T15-23-47.285735.json  masakhaner_luo_prompt_2_0shot_2026-01-16T16-37-38.713565.json  masakhaner_luo_prompt_2_0shot_2026-01-16T17-35-22.033409.json  masakhaner_luo_prompt_2_5shot_2026-01-16T16-59-59.899345.json  masakhaner_luo_prompt_2_5shot_2026-01-16T20-02-07.371221.json  masakhaner_luo_prompt_3_0shot_2026-01-16T17-17-53.199351.json  masakhaner_luo_prompt_3_0shot_2026-01-16T20-19-39.102073.json  masakhaner_luo_prompt_3_5shot_2026-01-16T20-39-07.271056.json  masakhaner_luo_prompt_4_0shot_2026-01-16T20-57-28.313639.json  masakhaner_luo_prompt_4_5shot_2026-01-16T21-18-16.842863.json  masakhaner_luo_prompt_5_0shot_2026-01-16T21-33-43.465177.json  masakhaner_luo_prompt_5_5shot_2026-01-16T21-51-46.348269.json  masakhaner_sw_prompt_1_0shot_2026-01-16T23-25-10.147529.json  (+45 more)
all-results-formatted/: model_comparison.md  results_2025-12-17T21-42-56.466948.json  results_2025-12-17T21-46-45.855761.json  results_2025-12-17T22-28-21.627930.json  results_2025-12-17T22-32-09.153092.json
all-results-original/: model_comparison.md  results_2025-12-17T20-24-58.608862.json  results_2025-12-17T20-28-43.535870.json  results_2025-12-17T20-51-30.688049.json  results_2025-12-17T20-55-03.328837.json  results_2025-12-17T21-17-00.220744.json  results_2025-12-17T21-20-46.994902.json
argilla/: docker-compose.yaml
based_superglue/: collect_stats.ipynb  run_superglue_0shot.sh  run_superglue_1shot.sh  run_superglue_5shot.sh
bash/: run_models.sh
batch_eval/: framework.py  main.py
calamita/: README.md  calamita_tasks_v1.txt  launch.slurm  print_tasks.py
calamita_utilities/: README.md  genera_per_autori.py  parse_for_website.py  parsed.json  tabellaConversioneGruppiTask.csv
configs/: config.json  config_large.json  config_lila.json  config_mmlu_cot.json  config_proofnet.json  default_config.yaml  majk.json  proofnet_config.json
custom_eval/: dp.sh  dp_mp.sh  plot_milu.ipynb  run.sh
docker/: Dockerfile  README.md  install_packages.sh  install_submodules.sh
docs/: API_guide.md  CONTRIBUTING.md  PROGRESS.md  README.md  advanced_task_guide.md  chat-template-readme.md  config_files.md  contributing.md  decontamination.md  description_guide.md  docstring_guide.md  faq.md  footguns.md  format_guide.md  gigachat.md  index.md  interface.md  llm_judge_metric.md  log_samples_format.md  migration_v0_5.md  model_guide.md  new_task_guide.md  offline_guide.md  python-api.md  rbln_guide.md  sequence_labeling.md  task_configuration_improvements_report.md  task_guide.md  task_table.md  token_classification_guide.md  troubleshooting.md  user_guide.md
eval_scripts/: benchmark.sh  eval.sh  eval_lila.sh  eval_lila_accelerate.sh  eval_math.sh  eval_math_accelerate.sh  eval_proofnet.sh  eval_proofnet_accelerate.sh  eval_pythia12blila.sh  eval_pythia12bmath.sh  generic_run.sh  generic_run_majk.sh  llemma_7b.sh  llemma_7b_majk.sh
examples/: README.md  dog_steer.csv  llm_judge_example_task.yaml  lm-eval-overview.ipynb  lm-eval-unitxt-prompt-templates.ipynb  transformer-lens.py  visualize-wandb.ipynb  visualize-zeno.ipynb
legal-multiple-choice/: dataset_dict.json
lm_eval/: README.md  __init__.py  __main__.py  _include.py  _types.py  base.py  chat_completion_sampler.py  common.py  custom_simple_evals.py  custom_types.py  decontamination.py  defaults.py  error_handling.py  evaluator.py  evaluator.py.save  evaluator.py.save.1  evaluator.py.save.2  evaluator.py.save.save  evaluator_judge.py  evaluator_utils.py  extract_prompt_target.py  humaneval_eval.py  logger.py  logging_utils.py  (+14 more)
lm_eval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+77748 files in other folders)
